# vcppbits

./: .travis.yml  CMakeLists.txt  CODING  ISSUES  LICENSE  README  README.md
CMake/: AddBit.cmake
SampleProject/: CMakeLists.txt  SampleProject.cpp
Tests/: TestsDriver.cpp
VcppBits/: VcppBitsBuildsystemUtils.cmake
VcppBits/KeyFile/: CMakeLists.txt  KeyFile.cpp  KeyFile.hpp  README
VcppBits/MathUtils/: CMakeLists.txt  MathUtils.hpp  MathUtilsTests.cpp
VcppBits/Settings/: CMakeLists.txt  Setting.cpp  Setting.hpp  Settings.cpp  Settings.hpp  SettingsException.hpp  SettingsStringUtils.hpp  SettingsTests.cpp
VcppBits/Settings2/: CMakeLists.txt  Settings2.hpp  Settings2CustomTypeTests.cpp  Settings2Tests.cpp
VcppBits/SimpleVector/: CMakeLists.txt  SimpleVector.cpp  SimpleVector.hpp
VcppBits/StateManager/: CMakeLists.txt  IState.hpp  IStateChangesListener.hpp  StateManager.cpp  StateManager.hpp
VcppBits/StringUtils/: CMakeLists.txt  StringUtils.hpp
VcppBits/TestsDriver/: CMakeLists.txt
VcppBits/Translation/: CMakeLists.txt  Ids.hpp.in  Translation.cpp  Translation.hpp  TranslationForwardDecls.hpp
